--- a/index.html
+++ b/index.html
@@ -5,17 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment#02</title>
+
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
     <h1>Hello World</h1>
 
-    <p>What do you hope to learn in your HTML/CSS course?</p>
+    <p class="bold">What do you hope to learn in your HTML/CSS course?</p>
 <br>
-    <p class="bolding">I hope to create my own website, so it can be my portfolio.</p>
+    <p>I hope to create my own website, so it can be my portfolio.</p>
     <p>I would also like to learn how to add animations onto said website.</p>
     <p>And finally I would like to learn how to manage a website.</p>
 <br>
 
-<p>&copy; Gustavo A Percastre</p>
+<p class="copyright">&copy; Gustavo A Percastre</p>
 </body>
 </html>
